// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MonsterReviewModal > handles submission of new review 1`] = `
<div
  aria-hidden="true"
>
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary css-1l3bbxn-MuiButtonBase-root-MuiButton-root"
    tabindex="0"
    type="button"
  >
    Review
    <span
      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
    >
      <span
        class="css-y4cjyz-MuiTouchRipple-ripple MuiTouchRipple-ripple MuiTouchRipple-rippleVisible"
        style="width: 2.8284271247461903px; height: 2.8284271247461903px; top: -1.4142135623730951px; left: -1.4142135623730951px;"
      >
        <span
          class="MuiTouchRipple-child MuiTouchRipple-childLeaving"
        />
      </span>
    </span>
  </button>
</div>
`;

exports[`MonsterReviewModal > renders review button correctly 1`] = `
<div>
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary css-1l3bbxn-MuiButtonBase-root-MuiButton-root"
    tabindex="0"
    type="button"
  >
    Review
  </button>
</div>
`;
